--- a/frontend/src/app/auth/signup/signup.component.html
+++ b/frontend/src/app/auth/signup/signup.component.html
@@ -29,6 +29,15 @@
             <small *ngIf="emailValidate?.hasError('email')">Please enter valid email.</small>
           </div>
         </div>
+        <div class="fom-group">
+          <label for="mobileNo">Mobile Numbers</label>
+          <input type="text" formControlName="mobileNo" class="form-control mb-3 mt-2" id="mobileNo" placeholder="Please enter mobile number">
+          <div *ngIf="mobileValidate?.touched && mobileValidate?.invalid" class="text-danger">
+            <small *ngIf="mobileValidate?.hasError('required')">Phone is required.</small>
+            <small *ngIf="mobileValidate?.hasError('minlength')">Mobile no should be minimum 10 digit.</small>
+            <small *ngIf="mobileValidate?.hasError('maxlength')">Mobile no should be max 12 digit.</small>
+          </div>
+        </div>
         <div class="form-group">
           <label for="passwords">Password</label>
           <input type="password" formControlName="password" class="form-control mb-3 mt-2" id="passwords" placeholder="Pleas enter password">
@@ -50,7 +59,7 @@
           </div>
         </div>
 
-        <button type="button" (click)="submitLogin()"  class="btn btn-success mt-3">Signup</button>
+        <button type="button" (click)="submitLogin()" [disabled]="signupForm.invalid" class="btn btn-success mt-3">Signup</button>
       </form>
     </div>
   </div>
