--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/public">Home </a>
+        <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/auth/login">Login</a>
